<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="import_description_wifi">WIFI:LEYUE</string>
    <string name="import_description_tip">传输过程中请勿退出此页面</string>
    <string name="import_description">在电脑浏览器访问如下地址</string>
    <string name="import_connecting">正在获取地址</string>
    <string name="import_description_connect">已建立连接，请传输</string>
    <string name="import_description_connect_des">传输过程中请不要关闭此页面或锁屏</string>
    <string name="transfer_ing">正在传输：%s</string>
    <string name="transfer_end">传输完成： %s</string>
    <string name="transfer_error">传输失败： %s</string>
    <string name="transfer_res">已完成：%1$d 失败：%2$d</string>
    <string name="transfer_delete_file">删除文件：%s</string>
    <string name="china_telecom_voice_buy_no_ctwap_tip">请先切换到CTWAP网络，再重启天翼阅读进行购买！</string>
    <string name="voice_buy_no_ctwap_tip">目前该操作仅支持中国电信用户，我们将很快就会推出相应的解决方案~敬请期待~</string>
    <string name="china_telecom_voice_unsubscribe_no_ctwap_tip">您需要先切换到移动网络CTWAP模式再重启天翼阅读进行退订。对给您造成的不便，我们深表歉意！后续我们会努力改进，望继续支持！</string>
    <string name="voice_unsubscribe_no_ctwap_tip">目前该操作仅支持中国电信用户，我们将很快就会推出相应的解决方案~敬请期待~</string>
    <string name="main_menu_feedback">意见反馈</string>
    <string name="QQ_group_number">客服QQ群:329118848</string>
    <string name="Weixin_number">微信服务号:lereader</string>
    <string name="main_menu_software_share">软件分享</string>
    <string name="main_menu_delete">删除</string>
    <string name="main_menu_download">批量下载</string>
    <string name="main_menu_list_switch">列表切换</string>
    <string name="main_menu_setting">系统设置</string>
    <string name="main_menu_help">帮助</string>
    <string name="main_menu_upgrade">软件升级</string>
    <string name="main_menu_exit">退出</string>
    <string name="main_bookshelf_btn">书架</string>
    <string name="main_bookcity_btn">书城</string>
    <string name="main_bookranking_btn">排行</string>
    <string name="main_booksearch_btn">搜索</string>
    <string name="main_usercenter_btn">中心</string>
    <string name="setting_about_btn">关于</string>
    <string name="main_menu_help_goto_read_tip">进入天翼阅读</string>
    <string name="software_name">天翼阅读android客户端</string>
    <string name="version_info">%s版本</string>
    <string name="app_update">版本更新</string>
    <string name="remove_all">批量删除</string>
    <string name="my_info">我的资料 %s</string>
    <string name="person_info_modify_nickname">修改昵称</string>
    <string name="person_info_modify_email">修改邮箱</string>
    <string name="person_info_modify_mobile">修改手机号</string>
    <string name="person_info_modify_sex">修改性别</string>
    <string name="person_info_modify_age">修改出生日期</string>
    <string name="person_info_modify_signature">修改个性签名</string>
    <string name="person_info_modify_nickname_hint">请完善昵称</string>
    <string name="person_info_modify_signature_hint">请完善个性签名</string>
    <string name="my_user_phonenum">153000*****</string>
    <string name="my_complete_prompt">完善资料,让好友更轻松地找到您</string>
    <string name="my_complete_level">完善度: %s</string>
    <string name="my_complete_percent">百分之(%s)</string>
    <string name="my_tag_manager">我的标签管理</string>
    <string name="my_nick">昵称: %s</string>
    <string name="my_sex">性别: %s</string>
    <string name="my_addr">所在地：%s</string>
    <string name="my_email">邮箱：%s</string>
    <string name="my_personaldetail">个人简介：简单的说些什么吧，让好友更好地了解您</string>
    <string name="my_realname">真实姓名：%s</string>
    <string name="my_realname_scan">仅主人可见</string>
    <string name="my_birthdate">出生日期：%s</string>
    <string name="my_company">公司：%s</string>
    <string name="my_school">学校：%s</string>
    <string name="my_psw_change">修改密码</string>
    <string name="my_screat_setting">隐私设置</string>
    <string name="no_ask_again">一周内不再提醒</string>
    <string name="update_text">升级</string>
    <string name="skip_text">跳过</string>
    <string name="user_login_state_unlogin"></string>
    <string name="user_login_state_login">已登录</string>
    <string name="user_login_login_out_tip">确定退出当前账号吗？</string>
    <string name="user_login_state_switch_accounts">切换账号</string>
    <string name="user_login_state_go_login">登录</string>
    <string name="buy_success_tip">购买成功，感谢支持正版！</string>
    <string name="voice_buy_success">购买成功！请继续支持正版！</string>
    <string name="voice_buy_fail">购买失败，请稍后重试！</string>
    <string name="voice_order_success">包月成功！请继续支持正版！</string>
    <string name="voice_unorder_success">成功退订该包月专区！</string>
    <string name="voice_order_fail">包月失败，请稍后重试！</string>
    <string name="voice_read_point_not_enough">账户余额不足，请先充值或切换成话费支付</string>
    <string name="voice_order_relation_exist">购买失败：你已经购买过</string>
    <string name="voice_product_free">购买失败：该作品为免费作品，无法订购</string>
    <string name="voice_package_not_exit">购买失败：该频道包不存在</string>
    <string name="voice_product_not_exit">购买失败：该作品不存在</string>
    <string name="service_agreement_terms_title">提示</string>
    <string name="btn_text_agree">\u0020同\u0020\u0020\u0020意\u0020</string>
    <string name="btn_text_disagree">不同意</string>
    <string name="service_number">10000</string>
    <string name="service_content">天翼阅读用户服务协议</string>
    <string name="service_agreement_terms_number">　　尊敬的用户，本应用需要建立数据链接并提供信息推送服务，所产生的流量费用将根据您的套餐资费标准收取，详情请咨询10000。</string>
    <string name="service_agreement_terms_content">　　更多的协议说明，请参考《天翼阅读用户服务协议》，如果您确定使用本应用，即表明您同意接受此服务条款与协议。</string>
    <string name="notification_download_finish_title">《%s》下载完成</string>
    <string name="notification_download_chapter_tip">\u0020第%s章</string>
    <string name="notification_download_finish_title_pre">《%s</string>
    <string name="notification_download_finish_title_post">》下载完成</string>
    <string name="notification_download_finish_content">点击打开</string>
    <string name="notification_download_start_tip">正在下载%s个任务</string>
    <string name="notification_download_start_single_tip">正在下载《%s》</string>
    <string name="notification_download_start_single_tip_pre">正在下载《%s</string>
    <string name="notification_download_start_single_tip_post">》</string>
    <string name="notification_download_info_tip">已暂停%1$s个任务,下载失败%2$s个任务,已完成%3$s个任务</string>
    <string name="notification_download_unfinish_tip">已暂停%1$s个任务,下载失败%2$s个任务</string>
    <string name="notification_download_click_tip">点击进入查看</string>
    <string name="notification_resident_tip">天翼阅读正在后台运行</string>
    <string name="notification_resident_click_tip">点击进入天翼阅读</string>
    <string name="notification_software_recommend_tip">天翼阅读软件推荐</string>
    <string name="appwidget_not_net_work_read_book">当前无网络连接，无法进行在线阅读！</string>
    <string name="appwidget_not_net_work_book_info">当前无网络连接，无法进行查看书籍详情！</string>
    <string name="appwidget_not_net_work_msg">当前无网络连接，无法查看消息！</string>
    <string name="appwidget_not_notice_tip">天翼阅读为您打造绝佳的移动阅读体验!</string>
    <string name="appwidget_not_notice">暂无公告！</string>
    <string name="appwidget_notice_tip">公告:\n</string>
    <string name="appwidget_last_read_bookshelf_not_data_tip">还没有阅读记录，请先阅读您喜欢的内容!</string>
    <string name="help_tip_local">常见问题</string>
    <string name="help_tip_net">在线帮助</string>
    <string name="help_tip_title">帮助小贴士</string>
    <string name="help_tip_text">下次不再提示</string>
    <string name="help_tip_menu">1．	想查看或修改您的个人信息吗？请点击进入‘个人信息’。\n
	2．	想查询您的消费记录和积分情况吗？请点击进入‘个人信息’。\n
	3．	想查询您的评论记录吗？请点击进入‘个人信息’。\n
	4．	想查询当前是否有更新的客户端版本供您升级吗？请点击‘软件升级’查询升级信息。\n
	5．	天翼客户端希望您能留下您宝贵的意见，请点击‘意见反馈’进入留言板。
</string>
    <string name="help_tip_system_msg">1.	想查看您的最新连载订阅通知吗？请点击蓝色栏目区的‘我的更新’查阅。\n
	2.	想查看最新的系统公告吗？请点击蓝色栏目区的‘中心’-‘我的消息’查阅。
</string>
    <string name="help_tip_search">想快速搜索您想阅读的书籍，杂志和漫画吗？请在搜索框中输入搜索信息，点击‘搜索’即可。</string>
    <string name="help_tip_ranking">您想查看更多排行吗？请点击图书，连载，杂志，漫画的图标，便可查看更多排行榜，查询当前最火爆的内容。</string>
    <string name="help_tip_city">1．	如何购买电子书？ 您只需点击您希望购买的资源进入介绍页面，点击屏幕上的购买按键，选中购买方式并成功购买后，您就可以选择下载阅读或在线阅读的两种方式进行阅读。同时，在您购买前也可以选择免费试读。\n
	2．	如何订购包月专区？您只需点击蓝色栏目区中的‘包月’，进入包月页面，便可任意订购您喜欢的包月栏目。
</string>
    <string name="help_tip_bookshelf">1．	想快速查看您所有已下载的图书、杂志、漫画吗？请点击蓝色栏目区的‘下载’进行查阅。\n
	2．	想快速查看您最近阅读过的书籍吗？请点击蓝色栏目区的‘最近’进行查阅。\n
</string>
    <string name="help_tip_reader">1．	觉得现有字体阅读起来不合适？您只需点击‘字体’按钮，设置最适合您的阅读风格、字体大小、行间距和字间距。\n
	2．	想保存此页为书签便于下次继续阅读吗？您只需点击‘菜单’按钮中的‘书签’选项，设置本页为书签，或者读取您的其他书签。\n
	3．	想全屏阅读吗？您只需点击‘菜单’按钮中的‘全屏’选项，获取更爽的阅读体验！\n
	4．	想设置自动滚屏阅读吗？您只需点击‘菜单’按钮中的‘自动浏览’选项，让阅读更方便！\n
	5．	想设置更炫的翻页特效吗？您只需点击‘菜单’按钮中的‘阅读设置-基本设置’选项。\n
	6．	想把这个书推荐给您的好友吗？您只需点击‘菜单’按钮中的‘推荐’选项，输入好友的手机号并留下您的推荐留言即可。\n
	7．	快快与其他书友分享您的读后感吧！您只需点击‘菜单’按钮中的‘评论管理-添加评论’选项。\n
	8．	想看看其他书友对于此书的评论吗？您只需点击‘菜单’按钮中的‘评论管理-浏览评论’选项。\n
	9．	离开阅读页面，您只需点击屏幕右上角的返回按钮。
</string>
    <string name="help_read_tip_title">阅读提示</string>
    <string name="help_tip_read_control">天翼阅读为您提供多种翻页阅读\n\n
1. 左右滚动翻页：点击屏幕左右进行上下翻页\n
2. 上下滚动翻页：点击屏幕上下进行上下翻页\n
3. 纸质翻页：点击屏幕左右模拟纸质上下翻页\n
翻页特效设置入口：阅读菜单-阅读设置-基本设置\n\n
可以试试看菜单键弹出快捷操作，让您的阅读更加便捷！
</string>
    <string name="help_tip_try_online">是否在线试读?</string>
    <string name="help_tip_change_setting">是否保存当前修改?</string>
    <string name="new_message_tip">您有新的消息，请进入我的消息查看！</string>
    <string name="wonderful_recommendation_tip">意见反馈</string>
    <string name="sfreader_audio_name_tip">您的支持是我们最大的动力</string>
    <string name="sfreader_audio_ad_tip">点此进入意见反馈</string>
    <string name="connection_mode_wifi">友情提示：您当前使用的是WLAN无线网络，请关闭WLAN并切换为“CTWAP”接入点后登录天翼阅读！选择“确定”进入离线登录模式，选择“取消”退出客户端。</string>
    <string name="connection_mode_no_cdma">友情提示：您当前使用的是"%s"，请切换为“CTWAP”接入点后登录天翼阅读！选择“确定”进入离线登录模式，选择“取消”退出客户端。</string>
    <string name="btn_text_confirm">确定</string>
    <string name="btn_text_cancel">取消</string>
    <string name="btn_text_recharge">充值</string>
    <string name="loading_sms_buy_send_sms_tip">短信发送中&#8230;</string>
    <string name="delete_data_current">删除</string>
    <string name="delete_data_all">删除全部</string>
    <string name="account_points_to_readticket">积分兑换阅点</string>
    <string name="account_readticket_recharge">阅点券充值</string>
    <string name="account_recharge_alipay_tip">支付宝充值</string>
    <string name="account_recharge_yi_pay_tip">翼支付充值</string>
    <string name="account_recharge_yi_pay_phone">请输入翼支付账号</string>
    <string name="account_recharge_sms_title">短信充阅点</string>
    <string name="account_recharge_for_number">充值账号: %s</string>
    <string name="account_recharge_from_number">付费手机号: %s</string>
    <string name="account_recharge_readpoint_count">充值阅点数: %s阅点</string>
    <string name="account_recharge_sms_price">价格: %s元</string>
    <string name="account_recharge_sms_friendly_tips">友情提示: 话费支付需要通过发送普通短信才能完成，费用由运营商收取</string>
    <string name="account_recharge_no_enough_total">账户余额不足，请先充值或切换成话费支付</string>
    <string name="account_recharge_from_where_tip">您也可以登录天翼阅读官网的个人中心充值</string>
    <string name="account_recharge_wap_tip">read.189.cn</string>
    <string name="account_recharge_rule">请输入阅点充值数额(1元=100阅点)</string>
    <string name="account_recharge_gain_point">您将获得%s阅点</string>
    <string name="yuan">元</string>
    <string name="register_text_input_sms_code">请输入短信验证码：</string>
    <string name="register_success_auto_login">注册成功后，开启自动登录</string>
    <string name="register_sms_code_type_tip">若一分钟内未收到短信，请重新获取</string>
    <string name="dialog_cancel">取消</string>
	<string name="reader_menu_item_volume_turn_page_auto_tip">音量键翻页</string>
	<string name="reader_menu_item_animation_setting_tip">翻页动画</string>
	<string name="reader_menu_item_rest_reminder_tip">休息提醒</string>
	<string name="reader_menu_item_screensaver_tip">阅读界面屏保时间</string>
	<string name="reader_menu_item_anim_type1_tip">仿真</string>
	<string name="reader_menu_item_anim_type2_tip">滑动</string>
	<string name="reader_menu_item_anim_type3_tip">无</string>
	<string name="reader_menu_item_reminder_type1_tip">45分钟</string>
	<string name="reader_menu_item_reminder_type2_tip">90分钟</string>
	<string name="reader_menu_item_reminder_type3_tip">120分钟</string>
	<string name="reader_menu_item_screensaver_type1_tip">2分钟</string>
	<string name="reader_menu_item_screensaver_type2_tip">5分钟</string>
	<string name="reader_menu_item_screensaver_type3_tip">10分钟</string>
	<string name="reader_menu_item_screensaver_type4_tip">无</string>
</resources>