<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ImageView 
        android:layout_marginTop="15dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line"/>
    <TextView 
        android:id="@+id/account_noenought_read_point_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#666666"
        android:paddingTop="10dip"
        android:textSize="15dip"
        android:layout_gravity="center_horizontal"
        android:text="@string/account_recharge_no_enough_total"/>
	<LinearLayout 
	    android:id="@+id/account_recharge_btn_lay"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginLeft="70dip"
	    android:layout_marginRight="70dip"
	    android:layout_gravity="center_horizontal"
	    >
	    <Button
			android:id="@+id/account_points_to_readticket_btn"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/account_points_to_readticket"
			android:textSize="15dip"
			android:paddingBottom="8dip"
			android:paddingTop="8dip"
			android:layout_marginTop="15dip"
			style="@style/recharge_button_normal"/>
  	    <Button
			android:id="@+id/account_readticket_recharge_btn"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/account_readticket_recharge"
			android:textSize="15dip"
			android:paddingBottom="8dip"
			android:paddingTop="8dip"
			android:layout_marginTop="15dip"
			style="@style/recharge_button_normal"/>
  	    <Button
			android:id="@+id/account_recharge_third_party_btn"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/account_recharge_alipay_tip"
			android:textSize="15dip"
			android:paddingBottom="8dip"
			android:paddingTop="8dip"
			android:layout_marginTop="15dip"
			style="@style/recharge_button_normal"/>
  	    <Button
			android:id="@+id/account_recharge_yi_party_btn"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/account_recharge_yi_pay_tip"
			android:textSize="15dip"
			android:paddingBottom="8dip"
			android:paddingTop="8dip"
			android:layout_marginTop="15dip"
			style="@style/recharge_button_normal"/>
  	    <Button
			android:id="@+id/account_recharge_sms_pay_btn"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/account_recharge_sms_title"
			android:textSize="15dip"
			android:paddingBottom="8dip"
			android:paddingTop="8dip"
			android:layout_marginTop="15dip"
			style="@style/recharge_button_normal"/>
	</LinearLayout>
	<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dip"
        android:textSize="15dip"
        android:text="@string/account_recharge_from_where_tip"/>
	<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:layout_gravity="center_horizontal"
        android:textSize="15dip"
        android:text="@string/account_recharge_wap_tip"/>
</LinearLayout>