<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:paddingLeft="16dip"
  android:paddingRight="16dip"
  >
  <TextView
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:textColor="@color/black"
	  	android:text="@string/register_text_input_sms_code"
	  	android:layout_marginTop="10dip"
	  	/>
	 <EditText
	  	android:id="@+id/register_sms_code_et"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:layout_marginTop="13dip"
	  	android:layout_marginBottom="16dip"
	  	android:singleLine="true"
	  	android:maxLength="30"
	  	/>
  <CheckBox 
  	android:id="@+id/regiset_auto_login_cb"
  	android:layout_width="wrap_content"
	android:layout_height="wrap_content" 
	android:checked="true"
	android:text="@string/register_success_auto_login" 
	android:textSize="16dip"
	android:textColor="@color/dialog_content" />	  	
	 <TextView
	 	android:id="@+id/register_confirm_tip_tv"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:textColor="@color/black"
	  	android:text="@string/register_sms_code_type_tip"
	  	android:textColorLink="#B1642B"
	  	/> 	
  <LinearLayout
  	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:gravity="center"
	android:layout_marginTop="20dip"
	android:layout_marginBottom="20dip"
  	>
  	<Button
	  	android:id="@+id/confirm_btn"
	  	android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		style="@style/button_normal"
		android:text="@string/btn_text_confirm"
		android:paddingTop="5dip"
	  	        android:paddingBottom="5dip"
	  	/>
	<Button
	  	android:id="@+id/cancel_btn"
	  	android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dip"
		style="@style/button_normal_light_color"
		android:text="@string/btn_text_cancel"
		android:paddingTop="5dip"
	  	        android:paddingBottom="5dip"
	  	/>  	
  </LinearLayout>	 
</LinearLayout>
