<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_recharge_yi_pay_phone"
        android:textSize="@dimen/font_book_info" />

    <EditText
        android:id="@+id/phone_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:hint="@string/account_recharge_yi_pay_phone"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/account_recharge_rule"
        android:textSize="@dimen/font_book_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/price_et"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right|center_vertical"
            android:inputType="number"
            android:maxLength="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/yuan"
            android:textSize="@dimen/font_book_info" />
    </LinearLayout>

    <TextView
        android:id="@+id/total_price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dip"
        android:text="@string/account_recharge_gain_point"
        android:textSize="@dimen/font_book_info" />

    <Button
        android:id="@+id/order_btn"
        style="@style/button_normal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/account_recharge_yi_pay_tip"
        android:textSize="@dimen/font_book_info" />

</LinearLayout>